# lazily-py

./: .gitignore  MANIFEST.in  Makefile  README.md  be.py  be_test.py  pyproject.toml
become/: __init__.py
tests/: test_become.py
